# ComputerVisionFinalProject

./: 16340028+陈思航+Exp8_part1.md  CMakeLists.txt  Final Project!.md  Final Project.md  segment.rar  start.bat  test.py
A4Warping/hand/: make.py  test.py
A4Warping/hand/SAVE/: model.ckpt.index
A4Warping/result/: result.csv
A4Warping/segment/: Projection.cpp  Projection.h  canny.cpp  canny.h  cutPiece.cpp  cutPiece.h  equalization.cpp  main.cpp  prepareLearning.cpp  reshape.cpp  warp.cpp
finalProject/: test.py
finalProject/A4Warping/: CMakeLists.txt
finalProject/A4Warping/hand/: buildTrain.py  makeit.py  mnistdeep2.py  simpleTest.py
finalProject/A4Warping/hand/SAVE/: model.ckpt.index
finalProject/A4Warping/result/: result.csv
finalProject/A4Warping/segment/: Hough.cpp  Hough.h  cutPiece.cpp  cutPiece.h  main.cpp  prepareLearning.cpp  prepareLearning.h  public.h  reshape.cpp  reshape.h  segment.cpp  segment.h  warp.h
finalProject/writeHelper/: CMakeLists.txt  main.cpp
hand/: buildTrain.py  make.py  mnistdeep.py  mnistdeep2.py  test.py
hand/SAVE/: model.ckpt.index
reportSrc/img0/: points.txt  result.txt
segment/: Hough.cpp  Hough.h  Projection.cpp  Projection.h  canny.cpp  cutPiece.cpp  cutPiece.h  equalization.h  main.cpp  prepareLearning.cpp  prepareLearning.h  public.h  reshape.h  segment.cpp  segment.h  warp.cpp  warp.h
temp/img0/: guide.txt
temp/img1/: guide.txt  points.txt
temp/img2/: guide.txt  points.txt
temp/img3/: guide.txt  points.txt
temp/img4/: guide.txt  points.txt
temp/img5/: guide.txt  points.txt
temp/img6/: guide.txt  points.txt
temp/img7/: guide.txt  points.txt
temp/img8/: guide.txt  points.txt
temp/img9/: guide.txt  points.txt
